BARC UAT/src/objects/HouseHold__c.object
<CustomObject>
    <fields>
        <fullName>Agricultural_land__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agricultural land</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Air_Conditioner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Air Conditioner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assets_Owned__c</fullName>
        <formula>T5D1__c +  T5D2__c +  T5D3__c + T5D4__c +  T5D5__c +  T5D6__c +  T5D7__c +  T5D8__c +  T5D9__c +  T5D10__c+  T5D11__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assets Owned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Broadband_Connection__c</fullName>
        <label>Broadband Connection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CarJeepVan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Car/Jeep/Van</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ceiling_Fan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ceiling Fan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Color_TV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Color TV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DQAID__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>DQAID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electricity_Connection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electricity Connection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>House_Ownership__c</fullName>
        <label>House Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ownership</fullName>
                </value>
                <value>
                    <fullName>Rented</fullName>
                </value>
                <value>
                    <fullName>Provided by Employer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Household_Status__c</fullName>
        <label>Household Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agreed Scheduled</fullName>
                </value>
                <value>
                    <fullName>Next Call</fullName>
                </value>
                <value>
                    <fullName>Not Connected</fullName>
                </value>
                <value>
                    <fullName>Installed agree</fullName>
                </value>
                <value>
                    <fullName>Next Visit</fullName>
                </value>
                <value>
                    <fullName>Door Locked</fullName>
                </value>
                <value>
                    <fullName>Refuse</fullName>
                </value>
                <value>
                    <fullName>Not Eligible</fullName>
                </value>
                <value>
                    <fullName>Technical Issue</fullName>
                </value>
                <value>
                    <fullName>Dongle Not Working</fullName>
                </value>
                <value>
                    <fullName>STB Not Working</fullName>
                </value>
                <value>
                    <fullName>Home Not Found</fullName>
                </value>
                <value>
                    <fullName>FORWARDED</fullName>
                </value>
                <value>
                    <fullName>TERMINATED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Installation_Date__c</fullName>
        <label>Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LPG_Stove__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LPG Stove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_BARC_Employee_Code__c</fullName>
        <defaultValue>&quot;2&quot;</defaultValue>
        <label>Member BARC Employee Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mother_Tongue__c</fullName>
        <label>Mother Tongue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language_Picklist_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCCS__c</fullName>
        <label>NCCS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Survey_Date__c</fullName>
        <label>Next Survey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_of_Members__c</fullName>
        <label>No of Members</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Guests__c</fullName>
        <label>Number of Guests</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Rooms__c</fullName>
        <label>Number of Rooms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5 or more</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Language1__c</fullName>
        <label>Other Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language_Picklist_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Language2__c</fullName>
        <label>Other Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language_Picklist_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Language_Code3__c</fullName>
        <description>T9Q17b_2</description>
        <label>Other Language Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Language_Code__c</fullName>
        <description>T8Q12_2</description>
        <label>Other Language Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Language__c</fullName>
        <label>Other Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language_Picklist_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personal_Computer_Laptop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personal Computer / Laptop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pincode__c</fullName>
        <label>Pincode</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruitment_Date__c</fullName>
        <label>Recruitment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Refrigerator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refrigerator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T4MB__c</fullName>
        <inlineHelpText>Age above 2 yrs</inlineHelpText>
        <label>T4MB</label>
        <summaryFilterItems>
            <field>HouseHold_Member__c.Age__c</field>
            <operation>greaterThan</operation>
            <value>2</value>
        </summaryFilterItems>
        <summaryForeignKey>HouseHold_Member__c.HouseHold__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>T5D10__c</fullName>
        <formula>IF(Washing_Machine__c == True,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T5D10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T5D11__c</fullName>
        <formula>IF(Agricultural_land__c == True,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T5D11</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T5D1__c</fullName>
        <formula>IF(Electricity_Connection__c == True,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T5D1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T6Q8__c</fullName>
        <formula>CASE(House_Ownership__c, 
						&quot;Ownership&quot;, 1,
      &quot;Rented&quot;, 2,
						&quot;Provided by Employer&quot;,3,
					 4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T6Q8</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T8Q12_1__c</fullName>
        <formula>CASE(Mother_Tongue__c,
				&quot;Assamese&quot;,&quot;1&quot;,
					&quot;Awadhi&quot;,&quot;2&quot;,
					&quot;Bengali&quot;,&quot;3&quot;,
					&quot;Bhojpuri&quot;,&quot;4&quot;,
					&quot;English&quot;,&quot;5&quot;,
					&quot;Garhwali&quot;,&quot;6&quot;,
					&quot;Gujarati&quot;,&quot;7&quot;,
					&quot;Hindi&quot;,&quot;8&quot;,
					&quot;Kannada&quot;,&quot;9&quot;,
					&quot;Konkani&quot;,&quot;10&quot;,
					&quot;Kutchi&quot;,&quot;11&quot;,
					&quot;Malayalam&quot;,&quot;12&quot;,
					&quot;Marwari&quot;,&quot;13&quot;,
					&quot;Marathi&quot;,&quot;14&quot;,
					&quot;Maithili&quot;,&quot;15&quot;,
					&quot;Oriya&quot;,&quot;16&quot;,
					&quot;Punjabi&quot;,&quot;17&quot;,
					&quot;Santali&quot;,&quot;18&quot;,
					&quot;Sindhi&quot;,&quot;19&quot;,
					&quot;Tamil&quot;,&quot;20&quot;,
					&quot;Telugu&quot;,&quot;21&quot;,
					&quot;Tulu&quot;,&quot;22&quot;,
					&quot;Urdu&quot;,&quot;23&quot;,
					&quot;Bodo&quot;,&quot;26&quot;,
					&quot;Dogri&quot;,&quot;27&quot;,
					&quot;Kashmiri&quot;,&quot;28&quot;,
					&quot;Khasi&quot;,&quot;29&quot;,
					&quot;Manipuri&quot;,&quot;30&quot;,
					&quot;Nepali&quot;,&quot;31&quot;,
					&quot;Sanskrit&quot;,&quot;32&quot;,
					&quot;Other Indian Languages&quot;,&quot;24&quot;,
					&quot;Other foreign languages&quot;,&quot;25&quot;,
					&quot;&quot;
				)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T8Q12_1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenement_Type__c</fullName>
        <label>Tenement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat / Apartment in multi-storeyed building</fullName>
                </value>
                <value>
                    <fullName>Independent floor (no other house on the same floor) in a multi-storeyed building</fullName>
                </value>
                <value>
                    <fullName>Villa / Bungalow /Kothi / Row house</fullName>
                </value>
                <value>
                    <fullName>Chawl</fullName>
                </value>
                <value>
                    <fullName>Slum</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TownVillage__c</fullName>
        <label>TownVillage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Two_Wheeler__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Two Wheeler</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_family__c</fullName>
        <label>Type of family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Joint Family</fullName>
                </value>
                <value>
                    <fullName>Living Alone</fullName>
                </value>
                <value>
                    <fullName>Nuclear Family without Elders</fullName>
                </value>
                <value>
                    <fullName>Nuclear Family with Elders</fullName>
                </value>
                <value>
                    <fullName>Siblings Living Together</fullName>
                </value>
                <value>
                    <fullName>Singles / Friends Living Together</fullName>
                </value>
                <value>
                    <fullName>Any Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>View_TV_Prog_via_Internet__c</fullName>
        <label>View TV Prog via Internet</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WID__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>WID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Washing_Machine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Washing Machine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Working_TV_sets__c</fullName>
        <label>Working TV sets</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>same_as_Type_of_Family__c</fullName>
        <defaultValue>false</defaultValue>
        <label>same as Type of Family</label>
        <type>Checkbox</type>
    </fields>
    <label>HouseHold</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DQAID__c</columns>
        <columns>WID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HN-{0}</displayFormat>
        <label>HouseHold Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HouseHolds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>